<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Welcome to strings.xml! -->
    <string name="app_name">Channels</string>

    <!-- Generic Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Status -->
    <string name="status_connecting">Connecting</string>
    <string name="status_socket_connected">Socket Connected</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_reconnecting">Reconnecting</string>

    <!-- Navigation Drawer -->
    <string name="header_channels">Channels</string>
    <string name="header_private_messages">PMs</string>
    <string name="header_active_clients">Active</string>
    <string name="header_inactive_clients">Inactive</string>

    <!-- Actions -->
    <string name="actions">Actions</string>
    <string name="dashboard">Dashboard</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_close">Disconnect and close</string>
    <string name="part">Part</string>
    <string name="part_close">Part and Close</string>
    <string name="close">Close</string>
    <string name="reconnect">Reconnect</string>
    <string name="server_actions">Server Actions</string>
    <string name="channel_actions">Channel Actions</string>

    <!-- Configuration Settings -->
    <string name="message_hint">Message</string>
    <string name="connection_settings">Connection</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="port">Port</string>
    <string name="port_error">Should be a number between 1 and 65535</string>
    <string name="configuration_add_title">Adding new configuration</string>
    <string name="ssl">SSL</string>
    <string name="ssl_accept_all">Accept All SSL Certificates</string>
    <string name="ssl_description">
        SSL is used to secure your connection but requires a special port (usually 6697).
    </string>
    <string name="user_settings">User</string>
    <string name="nick">Nick</string>
    <string name="real_name">Real Name</string>
    <string name="auto_change_nick">Auto-change nick name</string>
    <string name="auto_change_nick_desc">
        If your nick is already being used by someone on the network then a variant of your
        preferred nick will be used
    </string>
    <string name="auth_settings">Auth</string>
    <string name="server_username">Server Username</string>
    <string name="server_password">Server Password</string>
    <string name="server_password_desc">Usually a server password is not required.</string>
    <string name="default_user_handle">ChannelsUser</string>
    <string name="auth_mechanism">Authentication Mechanism</string>
    <string name="user_auth">User</string>
    <string name="server_auth">Server</string>
    <string name="nickserv_password">Nickserv Password</string>
    <string name="sasl_password">SASL Passsword</string>
    <string name="sasl_username">SASL Username</string>
    <string name="empty_error">Should not be empty</string>
    <string name="add_server">Add New Server</string>
    <string name="manage_servers">Manage Servers</string>
    <string name="configuration_not_saved">
        CAUTION: your current configuration cannot be saved. Would you like to continue?
    </string>

    <!-- Notification strings -->
    <string name="notification_action_disconnect">Disconnect</string>
    <string name="notification_action_disconnect_all">Disconnect all</string>
    <string name="notification_action_close">Close</string>
    <string name="notification_action_close_all">Close all</string>
    <string name="notification_action_reconnect">Reconnect</string>
    <string name="notification_action_reconnect_all">Reconnect all</string>
    <string name="notification_action_reply">Reply</string>
    <string name="notification_reconnect_wear_title">IRC disconnected</string>
    <string name="notification_reconnect_wear_content">Disconnected from %1$s. Touch to reconnect.</string>
    <string name="notification_reply_wear_title">Reply to %1$s</string>
    <string name="notification_mentioned_title">Mentioned in %1$s on %2$s</string>
    <string name="notification_queried_title">Queried by %1$s on %2$s</string>
    <string name="notification_mentioned_multi_title">Mentioned %1$d times</string>
    <string name="notification_queried_multi_title">Queried %1$d times</string>
    <string name="notification_mentioned_bigtext_title">%1$s on %2$s</string>
    <string name="notification_connected_title">Connected to %1$s</string>
    <string name="notification_connecting_title">Connecting to %1$s</string>
    <string name="notification_disconnected_title">Disconnected from %1$s</string>
    <string name="notification_reconnecting_title">Reconnecting to %1$s</string>

    <!-- Main -->
    <string name="no_child_selected">Welcome to Channels!\nPlease select a client on the left to begin.</string>
</resources>
