<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="configuration"
            type="co.fusionx.channels.presenter.ConfigurationUserPresenter.Configuration" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nick_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nick"
                    android:text="@{configuration.nick}" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:padding="4dp">

                <CheckBox
                    android:id="@+id/auto_change_nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{configuration.autoChangeNick}"
                    android:text="@string/auto_change_nick" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/auto_change_nick_desc" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/real_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/real_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/real_name"
                    android:text="@{configuration.realName}" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>